Add the length scalar function.